Make gray overlay cover everything, ensure dialog is always visible.

--- a/assets/shiny-server.css
+++ b/assets/shiny-server.css
@@ -12,7 +12,7 @@ body.disconnected {
   opacity: 1 !important;
   padding: .5em 1em 1em 1em;
   background-color: #FFF;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 30%;
   right: 30%;
@@ -27,14 +27,15 @@ body.disconnected {
 }
 
 #ss-gray-out {
-  position: absolute;
+  position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
+  bottom: 0;
   right: 0;
   background-color: #999;
   opacity: 0.7;
   z-index: 99998;
+  overflow: hidden;
 }
 
 #ss-clearfix {
